# BudgetPal

./: .gitignore  README.md  pyproject.toml
bootstrap_data/: version.json
bootstrap_data/config/: budgetpal_config.example.json
bootstrap_data/help/: index.html  settings_reference.html  troubleshooting.html
config/: budgetpal_config.json
core/: app_context.py  build_info.py  domain.py  logging_utils.py  main.py  path_registry.py  report_catalog.py  settings.py
core/importers/: __init__.py  csv_transactions.py  subtracker_view.py  xlsx_transactions.py
core/persistence/: __init__.py  db.py  migrations.py  schema.py
database/: budgetpal.sqlite  subscriptions.db
docs/: BudgetPal_Requirements_and_Design.md  Checking Reconciliation Terms.md  Credit Reconcilliation Terms.md  Managing Categories (BudgetPal and SubTracker).md  Recommended release and migration workflow.md
help/: about_help.html  architecture.html  getting_started.html  global_month_model.html  settings_reference.html  subtracker_integration.html  troubleshooting.html  ui_reference.html
scripts/: app_build.sh  app_make_dmg.sh  app_release_macos.sh  generate_macos_icon.sh  generate_macos_icons.sh
templates/: BudgetPal Transactions Template.xlsx  BudgetPal_Report_Template.docx  Template Monthly Transactions.numbers  Template Monthly Transactions.xlsx
tests/: test_build_info.py  test_categories_repo.py  test_core.py  test_help_service.py  test_integration.py  test_path_registry.py  test_reporting_service.py  test_settings.py  test_sub_payments.py  test_ui_smoke.py  test_xlsx_importer.py
(+52 files in other folders)
